# gstreamer-webrtc

./: .gitignore  README.md  clean-arc  compile  compile-arc  compile-str  init.sh  print_hex.sh  problems  rec  rtsp_archive_writer.c  rtsp_pipeline  rtsp_playback_archive.c  rtsp_streamer.c  run  run-arc  run-str  sig  stream_path_analyze.txt  tran  video  webrtc_offer_sdp.txt
data/: offer  webrtc_offer_sdp.txt  working_data_channel_sdp
env/signalling/: key.pem
env/webclient/: webrtc-old.js  webrtc.js
files/: rtsp_playback_archive.c  rtsp_streamer.c
pipeline/: arc_play  arc_write  str_play
pipelines/: arc_play  arc_write  depay.sh  depay_parse.sh  depay_parse_pay.sh  enc.sh  str_play  str_play.sh  tee.sh  write.sh  write_raw_h264.sh  write_raw_h264_depay_pay.sh  write_rtp.sh
sources/: rtsp_archive_writer.c  rtsp_playback_archive.c
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/video/: video_bin.c  video_bin.h
src/webrtc/: webrtc-sendrecv-old.c
webrtc/: peer  pipe  rec  sig  tran  translator  working_data_channel_sdp
webrtc/client/: server.js
webrtc/gst/: webrtc-sendrecv.c
webrtc/signalling/: cert.pem
webrtc/translator/: .webrtc-sendrecv.c.swo  Makefile  webrtc-sendrecv.c
webrtc/translator_src/: webrtc-sendrecv.c
webrtc/webclient/: index.html  webrtc.js
webrtc_env/webclient/: index.html
